# asmx

./: .gitignore  README.md  asmx.py  codegen.py  macros.py  out.txt  packages.py  parser.py  pyproject.toml  rps.asm  rps.txt  setup.cfg  test.asm  test.txt  tokeniser.py
.github/workflows/: publish.yml  pypi-publish.yml
asmx/: asmx.py
asmx/asmx_core/: codegen.py  macros.py  packages.py  parser.py  tokeniser.py
asmx/docs/: 404.html  index.html
asmx/docs/demos/: hello_world.html  rps.html
asmx/docs/guide/: Arithmetic.html  Getting Setup.html  Instruction Format.html  Reading Instructions.html  Registers.html  What is ASMX.html  index.html
asmx/docs/reference/: characters.html  hardcalls.html  instruction_set.html  iokit.html  registers.html
asmx_core/: macros.py  packages.py
demos/: hello_world.asm  rps.asm
test_programs/: hello_world.asm  input.asm  load_store.asm  rps.asm  test.asm
