[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asmx"
version = "0.1.1"
description = "ASMX - A macro assembler and virtual machine platform running on Scratch"
readme = "README.md"
license = { text = "MIT" }  # Or whichever license you chose
authors = [
  { name = "cousdev" }
]
requires-python = ">=3.7"
dependencies = [
  "colorama"
]

[project.scripts]
asmx = "asmx.asmx:main"

[tool.setuptools.package-data]
"*" = ["packages/*"]
