[metadata]
name = asmx
version = 0.1.0
description = ASMX - A macro assembler and virtual machine platform running on Scratch
author = cousdev

[options]
packages = find:
include_package_data = true
python_requires = >=3.7
install_requires = colorama

[options.entry_points]
console_scripts =
    asmx = asmx.asmx:main

[options.package_data]
* = packages/*